prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__append_select.longform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# duckdb:skip\n# postgres:skip\n\nfrom invoices\nselect { customer_id, invoice_id, billing_country }\ntake 10..15\nappend (\n  from invoices\n  select { customer_id, invoice_id, billing_country }\n  take 40..45\n)\nselect { billing_country, invoice_id }\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select.longform.prql
---
frames:
- - 1:45-96
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 145
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 146
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 147
      target_name: null
    inputs:
    - id: 143
      name: invoices
      table:
      - default_db
      - invoices
- - 1:97-108
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 145
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 146
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 147
      target_name: null
    inputs:
    - id: 143
      name: invoices
      table:
      - default_db
      - invoices
- - 1:136-187
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 126
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 127
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 128
      target_name: null
    inputs:
    - id: 124
      name: invoices
      table:
      - default_db
      - invoices
- - 1:190-201
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 126
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 127
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 128
      target_name: null
    inputs:
    - id: 124
      name: invoices
      table:
      - default_db
      - invoices
- - 1:109-203
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 145
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 146
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 147
      target_name: null
    inputs:
    - id: 143
      name: invoices
      table:
      - default_db
      - invoices
- - 1:204-242
  - columns:
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 155
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 156
      target_name: null
    inputs:
    - id: 143
      name: invoices
      table:
      - default_db
      - invoices
nodes:
- id: 124
  kind: Ident
  span: 1:120-133
  ident: !Ident
  - default_db
  - invoices
  parent: 130
- id: 126
  kind: Ident
  span: 1:145-156
  ident: !Ident
  - this
  - invoices
  - customer_id
  targets:
  - 124
  parent: 129
- id: 127
  kind: Ident
  span: 1:158-168
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 124
  parent: 129
- id: 128
  kind: Ident
  span: 1:170-185
  ident: !Ident
  - this
  - invoices
  - billing_country
  targets:
  - 124
  parent: 129
- id: 129
  kind: Tuple
  span: 1:143-187
  children:
  - 126
  - 127
  - 128
  parent: 130
- id: 130
  kind: 'TransformCall: Select'
  span: 1:136-187
  children:
  - 124
  - 129
  parent: 134
- id: 131
  kind: Literal
  span: 1:195-197
  alias: start
  parent: 134
- id: 132
  kind: Literal
  span: 1:199-201
  alias: end
  parent: 134
- id: 134
  kind: 'TransformCall: Take'
  span: 1:190-201
  children:
  - 130
  - 131
  - 132
  parent: 154
- id: 143
  kind: Ident
  span: 1:31-44
  ident: !Ident
  - default_db
  - invoices
  parent: 149
- id: 145
  kind: Ident
  span: 1:54-65
  ident: !Ident
  - this
  - invoices
  - customer_id
  targets:
  - 143
  parent: 148
- id: 146
  kind: Ident
  span: 1:67-77
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 143
  parent: 148
- id: 147
  kind: Ident
  span: 1:79-94
  ident: !Ident
  - this
  - invoices
  - billing_country
  targets:
  - 143
  parent: 148
- id: 148
  kind: Tuple
  span: 1:52-96
  children:
  - 145
  - 146
  - 147
  parent: 149
- id: 149
  kind: 'TransformCall: Select'
  span: 1:45-96
  children:
  - 143
  - 148
  parent: 153
- id: 150
  kind: Literal
  span: 1:102-104
  alias: start
  parent: 153
- id: 151
  kind: Literal
  span: 1:106-108
  alias: end
  parent: 153
- id: 153
  kind: 'TransformCall: Take'
  span: 1:97-108
  children:
  - 149
  - 150
  - 151
  parent: 154
- id: 154
  kind: 'TransformCall: Append'
  span: 1:109-203
  children:
  - 153
  - 134
  parent: 158
- id: 155
  kind: Ident
  span: 1:213-228
  ident: !Ident
  - this
  - invoices
  - billing_country
  targets:
  - 147
  parent: 157
- id: 156
  kind: Ident
  span: 1:230-240
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 146
  parent: 157
- id: 157
  kind: Tuple
  span: 1:211-242
  children:
  - 155
  - 156
  parent: 158
- id: 158
  kind: 'TransformCall: Select'
  span: 1:204-242
  children:
  - 154
  - 157
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:31-35
              args:
              - Ident:
                - invoices
                span: 1:36-44
            span: 1:31-44
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:45-51
              args:
              - Tuple:
                - Ident:
                  - customer_id
                  span: 1:54-65
                - Ident:
                  - invoice_id
                  span: 1:67-77
                - Ident:
                  - billing_country
                  span: 1:79-94
                span: 1:52-96
            span: 1:45-96
          - FuncCall:
              name:
                Ident:
                - take
                span: 1:97-101
              args:
              - Range:
                  start:
                    Literal:
                      Integer: 10
                    span: 1:102-104
                  end:
                    Literal:
                      Integer: 15
                    span: 1:106-108
                span: 1:102-108
            span: 1:97-108
          - FuncCall:
              name:
                Ident:
                - append
                span: 1:109-115
              args:
              - Pipeline:
                  exprs:
                  - FuncCall:
                      name:
                        Ident:
                        - from
                        span: 1:120-124
                      args:
                      - Ident:
                        - invoices
                        span: 1:125-133
                    span: 1:120-133
                  - FuncCall:
                      name:
                        Ident:
                        - select
                        span: 1:136-142
                      args:
                      - Tuple:
                        - Ident:
                          - customer_id
                          span: 1:145-156
                        - Ident:
                          - invoice_id
                          span: 1:158-168
                        - Ident:
                          - billing_country
                          span: 1:170-185
                        span: 1:143-187
                    span: 1:136-187
                  - FuncCall:
                      name:
                        Ident:
                        - take
                        span: 1:190-194
                      args:
                      - Range:
                          start:
                            Literal:
                              Integer: 40
                            span: 1:195-197
                          end:
                            Literal:
                              Integer: 45
                            span: 1:199-201
                        span: 1:195-201
                    span: 1:190-201
                span: 1:120-201
            span: 1:109-203
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:204-210
              args:
              - Tuple:
                - Ident:
                  - billing_country
                  span: 1:213-228
                - Ident:
                  - invoice_id
                  span: 1:230-240
                span: 1:211-242
            span: 1:204-242
        span: 1:31-242
    span: 1:0-242
