prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__append_select.shortform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# clickhouse:skip\n# glaredb:skip\n# sqlite:skip\n# mysql:skip\n\n# duckdb:test\n# postgres:test\n\n# default-dialect:duckdb\n\nfrom invoices\nselect { customer_id, invoice_id, billing_country }\ntake 10..15\nappend (\n  from invoices\n  select { customer_id, invoice_id, billing_country }\n  take 40..45\n)\nselect { billing_country, invoice_id }\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select.shortform.prql
---
frames:
- - 1:132-183
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 145
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 146
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 147
      target_name: null
    inputs:
    - id: 143
      name: invoices
      table:
      - default_db
      - invoices
- - 1:184-195
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 145
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 146
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 147
      target_name: null
    inputs:
    - id: 143
      name: invoices
      table:
      - default_db
      - invoices
- - 1:223-274
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 126
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 127
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 128
      target_name: null
    inputs:
    - id: 124
      name: invoices
      table:
      - default_db
      - invoices
- - 1:277-288
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 126
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 127
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 128
      target_name: null
    inputs:
    - id: 124
      name: invoices
      table:
      - default_db
      - invoices
- - 1:196-290
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 145
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 146
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 147
      target_name: null
    inputs:
    - id: 143
      name: invoices
      table:
      - default_db
      - invoices
- - 1:291-329
  - columns:
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 155
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 156
      target_name: null
    inputs:
    - id: 143
      name: invoices
      table:
      - default_db
      - invoices
nodes:
- id: 124
  kind: Ident
  span: 1:207-220
  ident: !Ident
  - default_db
  - invoices
  parent: 130
- id: 126
  kind: Ident
  span: 1:232-243
  ident: !Ident
  - this
  - invoices
  - customer_id
  targets:
  - 124
  parent: 129
- id: 127
  kind: Ident
  span: 1:245-255
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 124
  parent: 129
- id: 128
  kind: Ident
  span: 1:257-272
  ident: !Ident
  - this
  - invoices
  - billing_country
  targets:
  - 124
  parent: 129
- id: 129
  kind: Tuple
  span: 1:230-274
  children:
  - 126
  - 127
  - 128
  parent: 130
- id: 130
  kind: 'TransformCall: Select'
  span: 1:223-274
  children:
  - 124
  - 129
  parent: 134
- id: 131
  kind: Literal
  span: 1:282-284
  alias: start
  parent: 134
- id: 132
  kind: Literal
  span: 1:286-288
  alias: end
  parent: 134
- id: 134
  kind: 'TransformCall: Take'
  span: 1:277-288
  children:
  - 130
  - 131
  - 132
  parent: 154
- id: 143
  kind: Ident
  span: 1:118-131
  ident: !Ident
  - default_db
  - invoices
  parent: 149
- id: 145
  kind: Ident
  span: 1:141-152
  ident: !Ident
  - this
  - invoices
  - customer_id
  targets:
  - 143
  parent: 148
- id: 146
  kind: Ident
  span: 1:154-164
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 143
  parent: 148
- id: 147
  kind: Ident
  span: 1:166-181
  ident: !Ident
  - this
  - invoices
  - billing_country
  targets:
  - 143
  parent: 148
- id: 148
  kind: Tuple
  span: 1:139-183
  children:
  - 145
  - 146
  - 147
  parent: 149
- id: 149
  kind: 'TransformCall: Select'
  span: 1:132-183
  children:
  - 143
  - 148
  parent: 153
- id: 150
  kind: Literal
  span: 1:189-191
  alias: start
  parent: 153
- id: 151
  kind: Literal
  span: 1:193-195
  alias: end
  parent: 153
- id: 153
  kind: 'TransformCall: Take'
  span: 1:184-195
  children:
  - 149
  - 150
  - 151
  parent: 154
- id: 154
  kind: 'TransformCall: Append'
  span: 1:196-290
  children:
  - 153
  - 134
  parent: 158
- id: 155
  kind: Ident
  span: 1:300-315
  ident: !Ident
  - this
  - invoices
  - billing_country
  targets:
  - 147
  parent: 157
- id: 156
  kind: Ident
  span: 1:317-327
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 146
  parent: 157
- id: 157
  kind: Tuple
  span: 1:298-329
  children:
  - 155
  - 156
  parent: 158
- id: 158
  kind: 'TransformCall: Select'
  span: 1:291-329
  children:
  - 154
  - 157
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:118-122
              args:
              - Ident:
                - invoices
                span: 1:123-131
            span: 1:118-131
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:132-138
              args:
              - Tuple:
                - Ident:
                  - customer_id
                  span: 1:141-152
                - Ident:
                  - invoice_id
                  span: 1:154-164
                - Ident:
                  - billing_country
                  span: 1:166-181
                span: 1:139-183
            span: 1:132-183
          - FuncCall:
              name:
                Ident:
                - take
                span: 1:184-188
              args:
              - Range:
                  start:
                    Literal:
                      Integer: 10
                    span: 1:189-191
                  end:
                    Literal:
                      Integer: 15
                    span: 1:193-195
                span: 1:189-195
            span: 1:184-195
          - FuncCall:
              name:
                Ident:
                - append
                span: 1:196-202
              args:
              - Pipeline:
                  exprs:
                  - FuncCall:
                      name:
                        Ident:
                        - from
                        span: 1:207-211
                      args:
                      - Ident:
                        - invoices
                        span: 1:212-220
                    span: 1:207-220
                  - FuncCall:
                      name:
                        Ident:
                        - select
                        span: 1:223-229
                      args:
                      - Tuple:
                        - Ident:
                          - customer_id
                          span: 1:232-243
                        - Ident:
                          - invoice_id
                          span: 1:245-255
                        - Ident:
                          - billing_country
                          span: 1:257-272
                        span: 1:230-274
                    span: 1:223-274
                  - FuncCall:
                      name:
                        Ident:
                        - take
                        span: 1:277-281
                      args:
                      - Range:
                          start:
                            Literal:
                              Integer: 40
                            span: 1:282-284
                          end:
                            Literal:
                              Integer: 45
                            span: 1:286-288
                        span: 1:282-288
                    span: 1:277-288
                span: 1:207-288
            span: 1:196-290
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:291-297
              args:
              - Tuple:
                - Ident:
                  - billing_country
                  span: 1:300-315
                - Ident:
                  - invoice_id
                  span: 1:317-327
                span: 1:298-329
            span: 1:291-329
        span: 1:118-329
    span: 1:0-329
