prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__append_select.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from invoices\nselect { customer_id, invoice_id, billing_country }\ntake 10..15\nappend (\n  from invoices\n  select { customer_id, invoice_id, billing_country }\n  take 40..45\n)\nselect { billing_country, invoice_id }\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select.prql
---
frames:
- - 1:14-65
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 155
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 156
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 157
      target_name: null
    inputs:
    - id: 153
      name: invoices
      table:
      - default_db
      - invoices
- - 1:66-77
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 155
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 156
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 157
      target_name: null
    inputs:
    - id: 153
      name: invoices
      table:
      - default_db
      - invoices
- - 1:105-156
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 136
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 137
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 138
      target_name: null
    inputs:
    - id: 134
      name: invoices
      table:
      - default_db
      - invoices
- - 1:159-170
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 136
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 137
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 138
      target_name: null
    inputs:
    - id: 134
      name: invoices
      table:
      - default_db
      - invoices
- - 1:78-172
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 155
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 156
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 157
      target_name: null
    inputs:
    - id: 153
      name: invoices
      table:
      - default_db
      - invoices
    - id: 134
      name: invoices
      table:
      - default_db
      - invoices
- - 1:173-211
  - columns:
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 167
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 168
      target_name: null
    inputs:
    - id: 153
      name: invoices
      table:
      - default_db
      - invoices
    - id: 134
      name: invoices
      table:
      - default_db
      - invoices
nodes:
- id: 134
  kind: Ident
  span: 1:89-102
  ident: !Ident
  - default_db
  - invoices
  parent: 140
- id: 136
  kind: Ident
  span: 1:114-125
  ident: !Ident
  - this
  - invoices
  - customer_id
  targets:
  - 134
  parent: 139
- id: 137
  kind: Ident
  span: 1:127-137
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 134
  parent: 139
- id: 138
  kind: Ident
  span: 1:139-154
  ident: !Ident
  - this
  - invoices
  - billing_country
  targets:
  - 134
  parent: 139
- id: 139
  kind: Tuple
  span: 1:112-156
  children:
  - 136
  - 137
  - 138
  parent: 140
- id: 140
  kind: 'TransformCall: Select'
  span: 1:105-156
  children:
  - 134
  - 139
  parent: 144
- id: 141
  kind: Literal
  span: 1:164-166
  alias: start
  parent: 144
- id: 142
  kind: Literal
  span: 1:168-170
  alias: end
  parent: 144
- id: 144
  kind: 'TransformCall: Take'
  span: 1:159-170
  children:
  - 140
  - 141
  - 142
  parent: 166
- id: 153
  kind: Ident
  span: 1:0-13
  ident: !Ident
  - default_db
  - invoices
  parent: 159
- id: 155
  kind: Ident
  span: 1:23-34
  ident: !Ident
  - this
  - invoices
  - customer_id
  targets:
  - 153
  parent: 158
- id: 156
  kind: Ident
  span: 1:36-46
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 153
  parent: 158
- id: 157
  kind: Ident
  span: 1:48-63
  ident: !Ident
  - this
  - invoices
  - billing_country
  targets:
  - 153
  parent: 158
- id: 158
  kind: Tuple
  span: 1:21-65
  children:
  - 155
  - 156
  - 157
  parent: 159
- id: 159
  kind: 'TransformCall: Select'
  span: 1:14-65
  children:
  - 153
  - 158
  parent: 163
- id: 160
  kind: Literal
  span: 1:71-73
  alias: start
  parent: 163
- id: 161
  kind: Literal
  span: 1:75-77
  alias: end
  parent: 163
- id: 163
  kind: 'TransformCall: Take'
  span: 1:66-77
  children:
  - 159
  - 160
  - 161
  parent: 166
- id: 166
  kind: 'TransformCall: Append'
  span: 1:78-172
  children:
  - 163
  - 144
  parent: 170
- id: 167
  kind: Ident
  span: 1:182-197
  ident: !Ident
  - this
  - invoices
  - billing_country
  targets:
  - 157
  parent: 169
- id: 168
  kind: Ident
  span: 1:199-209
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 156
  parent: 169
- id: 169
  kind: Tuple
  span: 1:180-211
  children:
  - 167
  - 168
  parent: 170
- id: 170
  kind: 'TransformCall: Select'
  span: 1:173-211
  children:
  - 166
  - 169
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:0-4
              args:
              - Ident:
                - invoices
                span: 1:5-13
            span: 1:0-13
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:14-20
              args:
              - Tuple:
                - Ident:
                  - customer_id
                  span: 1:23-34
                - Ident:
                  - invoice_id
                  span: 1:36-46
                - Ident:
                  - billing_country
                  span: 1:48-63
                span: 1:21-65
            span: 1:14-65
          - FuncCall:
              name:
                Ident:
                - take
                span: 1:66-70
              args:
              - Range:
                  start:
                    Literal:
                      Integer: 10
                    span: 1:71-73
                  end:
                    Literal:
                      Integer: 15
                    span: 1:75-77
                span: 1:71-77
            span: 1:66-77
          - FuncCall:
              name:
                Ident:
                - append
                span: 1:78-84
              args:
              - Pipeline:
                  exprs:
                  - FuncCall:
                      name:
                        Ident:
                        - from
                        span: 1:89-93
                      args:
                      - Ident:
                        - invoices
                        span: 1:94-102
                    span: 1:89-102
                  - FuncCall:
                      name:
                        Ident:
                        - select
                        span: 1:105-111
                      args:
                      - Tuple:
                        - Ident:
                          - customer_id
                          span: 1:114-125
                        - Ident:
                          - invoice_id
                          span: 1:127-137
                        - Ident:
                          - billing_country
                          span: 1:139-154
                        span: 1:112-156
                    span: 1:105-156
                  - FuncCall:
                      name:
                        Ident:
                        - take
                        span: 1:159-163
                      args:
                      - Range:
                          start:
                            Literal:
                              Integer: 40
                            span: 1:164-166
                          end:
                            Literal:
                              Integer: 45
                            span: 1:168-170
                        span: 1:164-170
                    span: 1:159-170
                span: 1:89-170
            span: 1:78-172
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:173-179
              args:
              - Tuple:
                - Ident:
                  - billing_country
                  span: 1:182-197
                - Ident:
                  - invoice_id
                  span: 1:199-209
                span: 1:180-211
            span: 1:173-211
        span: 1:0-211
    span: 1:0-211
