prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__append_select_compute.longform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# duckdb:skip\n# postgres:skip\n\nfrom invoices\nselect { customer_id, invoice_id, total }\ntake 5\nappend (\n  from invoice_items\n  select { invoice_line_id, invoice_id, unit_price }\n  take 5\n)\nselect { a = customer_id * 2, b = math.round 1 (invoice_id * total) }\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select_compute.longform.prql
---
frames:
- - 1:45-86
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 144
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 145
      target_name: null
    - !Single
      name:
      - invoices
      - total
      target_id: 146
      target_name: null
    inputs:
    - id: 142
      name: invoices
      table:
      - default_db
      - invoices
- - 1:87-93
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 144
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 145
      target_name: null
    - !Single
      name:
      - invoices
      - total
      target_id: 146
      target_name: null
    inputs:
    - id: 142
      name: invoices
      table:
      - default_db
      - invoices
- - 1:126-176
  - columns:
    - !Single
      name:
      - invoice_items
      - invoice_line_id
      target_id: 126
      target_name: null
    - !Single
      name:
      - invoice_items
      - invoice_id
      target_id: 127
      target_name: null
    - !Single
      name:
      - invoice_items
      - unit_price
      target_id: 128
      target_name: null
    inputs:
    - id: 124
      name: invoice_items
      table:
      - default_db
      - invoice_items
- - 1:179-185
  - columns:
    - !Single
      name:
      - invoice_items
      - invoice_line_id
      target_id: 126
      target_name: null
    - !Single
      name:
      - invoice_items
      - invoice_id
      target_id: 127
      target_name: null
    - !Single
      name:
      - invoice_items
      - unit_price
      target_id: 128
      target_name: null
    inputs:
    - id: 124
      name: invoice_items
      table:
      - default_db
      - invoice_items
- - 1:94-187
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 144
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 145
      target_name: null
    - !Single
      name:
      - invoices
      - total
      target_id: 146
      target_name: null
    inputs:
    - id: 142
      name: invoices
      table:
      - default_db
      - invoices
- - 1:188-257
  - columns:
    - !Single
      name:
      - a
      target_id: 153
      target_name: null
    - !Single
      name:
      - b
      target_id: 157
      target_name: null
    inputs:
    - id: 142
      name: invoices
      table:
      - default_db
      - invoices
nodes:
- id: 124
  kind: Ident
  span: 1:105-123
  ident: !Ident
  - default_db
  - invoice_items
  parent: 130
- id: 126
  kind: Ident
  span: 1:135-150
  ident: !Ident
  - this
  - invoice_items
  - invoice_line_id
  targets:
  - 124
  parent: 129
- id: 127
  kind: Ident
  span: 1:152-162
  ident: !Ident
  - this
  - invoice_items
  - invoice_id
  targets:
  - 124
  parent: 129
- id: 128
  kind: Ident
  span: 1:164-174
  ident: !Ident
  - this
  - invoice_items
  - unit_price
  targets:
  - 124
  parent: 129
- id: 129
  kind: Tuple
  span: 1:133-176
  children:
  - 126
  - 127
  - 128
  parent: 130
- id: 130
  kind: 'TransformCall: Select'
  span: 1:126-176
  children:
  - 124
  - 129
  parent: 132
- id: 132
  kind: 'TransformCall: Take'
  span: 1:179-185
  children:
  - 130
  - 133
  parent: 152
- id: 133
  kind: Literal
  parent: 132
- id: 142
  kind: Ident
  span: 1:31-44
  ident: !Ident
  - default_db
  - invoices
  parent: 148
- id: 144
  kind: Ident
  span: 1:54-65
  ident: !Ident
  - this
  - invoices
  - customer_id
  targets:
  - 142
  parent: 147
- id: 145
  kind: Ident
  span: 1:67-77
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 142
  parent: 147
- id: 146
  kind: Ident
  span: 1:79-84
  ident: !Ident
  - this
  - invoices
  - total
  targets:
  - 142
  parent: 147
- id: 147
  kind: Tuple
  span: 1:52-86
  children:
  - 144
  - 145
  - 146
  parent: 148
- id: 148
  kind: 'TransformCall: Select'
  span: 1:45-86
  children:
  - 142
  - 147
  parent: 150
- id: 150
  kind: 'TransformCall: Take'
  span: 1:87-93
  children:
  - 148
  - 151
  parent: 152
- id: 151
  kind: Literal
  parent: 150
- id: 152
  kind: 'TransformCall: Append'
  span: 1:94-187
  children:
  - 150
  - 132
  parent: 165
- id: 153
  kind: RqOperator
  span: 1:201-216
  alias: a
  targets:
  - 155
  - 156
  parent: 164
- id: 155
  kind: Ident
  span: 1:201-212
  ident: !Ident
  - this
  - invoices
  - customer_id
  targets:
  - 144
- id: 156
  kind: Literal
  span: 1:215-216
- id: 157
  kind: RqOperator
  span: 1:222-255
  alias: b
  targets:
  - 159
  - 160
  parent: 164
- id: 159
  kind: Literal
  span: 1:233-234
- id: 160
  kind: RqOperator
  span: 1:236-254
  targets:
  - 162
  - 163
- id: 162
  kind: Ident
  span: 1:236-246
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 145
- id: 163
  kind: Ident
  span: 1:249-254
  ident: !Ident
  - this
  - invoices
  - total
  targets:
  - 146
- id: 164
  kind: Tuple
  span: 1:195-257
  children:
  - 153
  - 157
  parent: 165
- id: 165
  kind: 'TransformCall: Select'
  span: 1:188-257
  children:
  - 152
  - 164
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:31-35
              args:
              - Ident:
                - invoices
                span: 1:36-44
            span: 1:31-44
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:45-51
              args:
              - Tuple:
                - Ident:
                  - customer_id
                  span: 1:54-65
                - Ident:
                  - invoice_id
                  span: 1:67-77
                - Ident:
                  - total
                  span: 1:79-84
                span: 1:52-86
            span: 1:45-86
          - FuncCall:
              name:
                Ident:
                - take
                span: 1:87-91
              args:
              - Literal:
                  Integer: 5
                span: 1:92-93
            span: 1:87-93
          - FuncCall:
              name:
                Ident:
                - append
                span: 1:94-100
              args:
              - Pipeline:
                  exprs:
                  - FuncCall:
                      name:
                        Ident:
                        - from
                        span: 1:105-109
                      args:
                      - Ident:
                        - invoice_items
                        span: 1:110-123
                    span: 1:105-123
                  - FuncCall:
                      name:
                        Ident:
                        - select
                        span: 1:126-132
                      args:
                      - Tuple:
                        - Ident:
                          - invoice_line_id
                          span: 1:135-150
                        - Ident:
                          - invoice_id
                          span: 1:152-162
                        - Ident:
                          - unit_price
                          span: 1:164-174
                        span: 1:133-176
                    span: 1:126-176
                  - FuncCall:
                      name:
                        Ident:
                        - take
                        span: 1:179-183
                      args:
                      - Literal:
                          Integer: 5
                        span: 1:184-185
                    span: 1:179-185
                span: 1:105-185
            span: 1:94-187
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:188-194
              args:
              - Tuple:
                - Binary:
                    left:
                      Ident:
                      - customer_id
                      span: 1:201-212
                    op: Mul
                    right:
                      Literal:
                        Integer: 2
                      span: 1:215-216
                  span: 1:201-216
                  alias: a
                - FuncCall:
                    name:
                      Ident:
                      - math
                      - round
                      span: 1:222-232
                    args:
                    - Literal:
                        Integer: 1
                      span: 1:233-234
                    - Binary:
                        left:
                          Ident:
                          - invoice_id
                          span: 1:236-246
                        op: Mul
                        right:
                          Ident:
                          - total
                          span: 1:249-254
                      span: 1:236-254
                  span: 1:222-255
                  alias: b
                span: 1:195-257
            span: 1:188-257
        span: 1:31-257
    span: 1:0-257
